--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -93,14 +93,14 @@
             </mat-error>
           </mat-form-field>
 
-          <button
-            mat-raised-button
+          <app-loading-button
             color="primary"
             type="submit"
             [disabled]="loginForm.invalid"
-          >
-            Login
-          </button>
+            [clickAction]="loginAction"
+            loaderName="login"
+            label="Login"
+          ></app-loading-button>
         </form>
       </mat-tab>
 
@@ -140,14 +140,14 @@
             </mat-error>
           </mat-form-field>
 
-          <button
-            mat-raised-button
-            color="accent"
+          <app-loading-button
+            color="primary"
             type="submit"
             [disabled]="registerForm.invalid"
-          >
-            Register
-          </button>
+            [clickAction]="registerAction"
+            loaderName="register"
+            label="Register"
+          ></app-loading-button>
         </form>
       </mat-tab>
     </mat-tab-group>
