document listing, hopefully querying and almost creation

--- a/frontend/src/app/components/app.component.html
+++ b/frontend/src/app/components/app.component.html
@@ -27,7 +27,7 @@
         label="Orgs"
       ></app-loading-button>
       <app-loading-button
-        [clickAction]="logoutAction"
+        [clickAction]="logout"
         colorTheme="primary"
         icon="logout"
         label="Logout"
