--- a/frontend/src/app/components/documents/documents.component.scss
+++ b/frontend/src/app/components/documents/documents.component.scss
@@ -61,3 +61,38 @@
     margin-left: 6rem;
     width: 40%;
 }
+
+.no-results {
+    color: white;
+}
+
+#new-doc-form-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    pointer-events: auto;
+    user-select: none;
+    align-items: center;
+    justify-content: center;
+}
+
+#new-doc-form {
+    display: flex;
+    flex-direction: column;
+    width: 30rem;
+    background-color: white;
+    border-radius: 0.5rem;
+    gap: 1rem;
+    padding: 1rem;
+}
+#new-doc-form h3 {
+    color: var(--mat-sys-primary);
+    font-size: 1.69rem;
+    text-align: center;
+}
