--- a/frontend/src/app/components/app.component.scss
+++ b/frontend/src/app/components/app.component.scss
@@ -1,4 +1,5 @@
 #toolbar {
+    flex-shrink: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,7 +25,20 @@
     gap: 8px;
 }
 
-#content {
-    width: 100%;
+html,
+body {
     height: 100%;
+    margin: 0;
+}
+
+.layout {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#content {
+    flex-grow: 1;
+    overflow-y: auto;
 }
