--- a/frontend/src/app/components/documents/documents.component.html
+++ b/frontend/src/app/components/documents/documents.component.html
@@ -22,7 +22,7 @@
     ></app-loading-button>
   </div>
 
-  <mat-grid-list class="grid-container" cols="8" rowHeight="5:4">
+  <mat-grid-list class="grid-container" cols="7" rowHeight="3:4">
     <ng-container *ngIf="documents.length > 0; else noResult">
       <mat-grid-tile *ngFor="let doc of documents" class="doc-tile">
         <mat-card class="doc">
@@ -35,6 +35,10 @@
               <p>{{ doc.orgName }}</p>
             </div>
           </ng-container>
+          <div class="org-container">
+            <mat-icon>person</mat-icon>
+            <p>{{ doc.creator }}</p>
+          </div>
           <div class="access">
             <app-loading-button
               [icon]="isEditor(doc.access) ? 'edit_note' : 'visibility'"
@@ -62,7 +66,9 @@
     <mat-form-field appearance="fill">
       <mat-label>Title</mat-label>
       <input matInput formControlName="title" />
-      <mat-error *ngFor="let error of valid.getControlErrors(newDocForm, 'title')">
+      <mat-error
+        *ngFor="let error of valid.getControlErrors(newDocForm, 'title')"
+      >
         {{ error }}
       </mat-error>
     </mat-form-field>
@@ -88,7 +94,9 @@
           {{ org.name }}
         </mat-option>
       </mat-select>
-      <mat-error *ngFor="let error of valid.getControlErrors(newDocForm, 'orgID')">
+      <mat-error
+        *ngFor="let error of valid.getControlErrors(newDocForm, 'orgID')"
+      >
         {{ error }}
       </mat-error>
     </mat-form-field>
