--- a/frontend/src/app/components/organizations/details/details.component.scss
+++ b/frontend/src/app/components/organizations/details/details.component.scss
@@ -34,13 +34,33 @@
     padding: 1rem;
 }
 
+.members {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    gap: 1rem;
+}
+.member {
+    background-color: #b1cff1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0.7rem;
+}
+.member-email, .member-addedby{
+    margin: 0;
+    font-weight: normal;
+}
+
 .forms-root {
     height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-
+.tab {
+    overflow: auto;
+}
 .tabs {
     width: 35rem;
     overflow: hidden;
